Prepare for 0.20 release.
* gettext-runtime/intl/libgnuintl.in.h (LIBINTL_VERSION): Update.
* gettext-tools/libgettextpo/gettext-po.in.h (LIBGETTEXTPO_VERSION): Update.
* gettext-runtime/m4/gettext.m4: Bump version number in comment.
* gettext-runtime/m4/intl.m4: Likewise.
* gettext-runtime/m4/intlmacosx.m4: Likewise.
* gettext-runtime/m4/po.m4: Likewise.
(GETTEXT_MACRO_VERSION): Bump to 0.20.
* gettext-runtime/po/Makefile.in.in (GETTEXT_MACRO_VERSION): Likewise.
* gettext-runtime/intl/Makefile.am (LTV_*): Bump to 9:6:2.
* gettext-tools/libgettextpo/Makefile.am (LTV_*): Bump to 5:5:5.
* gettext-tools/configure.ac (ARCHIVE_VERSION): Set to 0.20.
* gettext-tools/misc/autopoint.in: Accept version 0.20.
* gettext-runtime/doc/matrix.texi: Update from TP.
* gettext-runtime/doc/nls.texi (STATUS): Update.
* gettext-runtime/src/envsubst.c (main): Update copyright year in --version
output.
* gettext-runtime/src/gettext.c (main): Likewise.
* gettext-runtime/src/ngettext.c (main): Likewise.
* gettext-tools/src/cldr-plurals.c (main): Likewise.
* gettext-tools/src/hostname.c (main): Likewise.
* gettext-tools/src/msgattrib.c (main): Likewise.
* gettext-tools/src/msgcat.c (main): Likewise.
* gettext-tools/src/msgcmp.c (main): Likewise.
* gettext-tools/src/msgcomm.c (main): Likewise.
* gettext-tools/src/msgconv.c (main): Likewise.
* gettext-tools/src/msgen.c (main): Likewise.
* gettext-tools/src/msgexec.c (main): Likewise.
* gettext-tools/src/msgfilter.c (main): Likewise.
* gettext-tools/src/msgfmt.c (main): Likewise.
* gettext-tools/src/msggrep.c (main): Likewise.
* gettext-tools/src/msginit.c (main): Likewise.
* gettext-tools/src/msgmerge.c (main): Likewise.
* gettext-tools/src/msgunfmt.c (main): Likewise.
* gettext-tools/src/msguniq.c (main): Likewise.
* gettext-tools/src/recode-sr-latin.c (main): Likewise.
* gettext-tools/src/urlget.c (main): Likewise.
* gettext-tools/src/xgettext.c (main): Likewise.
* gettext-runtime/src/gettext.sh.in (func_version): Update copyright year.
* ge

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 ## file is not erased by "make mostlyclean".
 
 # Files brought in manually:
+/gettext-runtime/doc/Admin/jdom-1.0.jar
+/gettext-runtime/doc/Admin/Matrix*.class
+/gettext-runtime/doc/Admin/matrix.xml
 /gettext-tools/misc/archive.dir.tar
 
 # Files brought in by gnulib-tool:
