--- a/gettext-runtime/tests/Makefile.am
+++ b/gettext-runtime/tests/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-runtime/tests subdirectory of GNU gettext
-## Copyright (C) 2005-2006, 2008-2009, 2014-2015 Free Software Foundation, Inc.
+## Copyright (C) 2005-2006, 2008-2009, 2014-2015, 2019 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -19,15 +19,13 @@
 AUTOMAKE_OPTIONS = 1.11 gnits no-dependencies color-tests subdir-objects
 EXTRA_DIST =
 
-TESTS = test-lock
+TESTS =
 
 AM_CPPFLAGS = \
   -I.. \
   -I$(srcdir)/../intl
 
-check_PROGRAMS = test-lock
-test_lock_SOURCES = test-lock.c ../intl/lock.c ../intl/threadlib.c
-test_lock_LDADD = @LIBMULTITHREAD@ @LIBSCHED@
+check_PROGRAMS =
 
 # Clean up after Solaris cc.
 clean-local:
