Fix msginit-4 test failure on mingw.
* gettext-tools/src/Makefile.am (DEFS): Define EXEEXT.
* gettext-tools/src/msginit.c (plural_forms): On Windows, invoke
"cldr-plurals.exe", not "cldr-plurals".

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -83,7 +83,8 @@ DEFS = \
   -DGETTEXTJAR=\"$(jardir)/gettext.jar\" \
   -DLIBDIR=\"$(libdir)\" \
   -DGETTEXTDATADIR=\"$(pkgdatadir)\" \
-  -DPROJECTSDIR=\"$(projectsdir)\" @DEFS@
+  -DPROJECTSDIR=\"$(projectsdir)\" \
+  -DEXEEXT=\"@EXEEXT@\" @DEFS@
 # Ensure that <stdint.h> defines SIZE_MAX in C++ mode, like it does in C mode.
 AM_CXXFLAGS = -D__STDC_LIMIT_MACROS
 
