Add unit test for libintl_version.
* gettext-tools/tests/intl-version-prg.c: New file.
* gettext-tools/tests/intl-version: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
(check_PROGRAMS): Add intl-version-prg.
(intl_version_prg_SOURCES, intl_version_prg_LDADD): New variables.

--- a/.gitignore
+++ b/.gitignore
@@ -695,6 +695,8 @@ autom4te.cache/
 /gettext-tools/tests/intl-thread-2-prg.exe
 /gettext-tools/tests/intl-thread-3-prg
 /gettext-tools/tests/intl-thread-3-prg.exe
+/gettext-tools/tests/intl-version-prg
+/gettext-tools/tests/intl-version-prg.exe
 /gettext-tools/tests/sentence-1-prg
 /gettext-tools/tests/sentence-1-prg.exe
 /gettext-tools/tests/testlocale
