build: Avoid the use of mingw winpthreads for multithreading.
* gettext-runtime/configure.ac: Invoke gl_AVOID_WINPTHREAD.
* gettext-tools/configure.ac: Likewise.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -77,6 +77,9 @@ AC_EXEEXT
 dnl For a 64-bit build on AIX, AC_PROG_RANLIB is not sufficient.
 gl_PROG_AR_RANLIB
 
+dnl Set preferences for the gnulib module 'threadlib'.
+gl_AVOID_WINPTHREAD
+
 dnl Make sure we see all GNU and Solaris extensions.
 gl_EARLY
 grgl_EARLY
