libtextstyle: Upgrade to libcroco-0.6.13.
This fixes a couple of warnings.

Reported by Frank Hunleth <fhunleth@troodon-software.com>
at <https://savannah.gnu.org/bugs/?55356>.

* libtextstyle/gnulib-local/lib/libcroco/*: Upgrade to version 0.6.13.
* libtextstyle/gnulib-local/modules/libcroco: Update.
* libtextstyle/gnulib-local/lib/glib/gmacros.in.h: New file, based on
glib-2.12.4/glib/gmacros.h.
* libtextstyle/gnulib-local/lib/glib/gprintfint.in.h: New file, based on
glib-2.12.4/glib/gprintfint.h.
* libtextstyle/Makefile.am (EXTRA_DIST): Add them.
* libtextstyle/gnulib-local/m4/libglib.m4 (gl_LIBGLIB): Add glib/gmacros.h and
glib/gprintfint.h to LIBGLIB_H.
* libtextstyle/gnulib-local/modules/libglib (Files): Add lib/glib/gmacros.in.h,
lib/glib/gprintfint.in.h.
(Depends-on): Add snprintf-posix.
(glib/gmacros.h, glib/gprintfint.h): New rules.
(MOSTLYCLEANFILES): Add glib/gmacros.h, glib/gprintfint.h.
* libtextstyle/gnulib-local/lib/glib.in.h: Include glib/gmacros.h.
* libtextstyle/gnulib-local/lib/glib/gstrfuncs.in.h (g_ascii_dtostr,
g_ascii_formatd, g_ascii_strcasecmp): Enable declarations.
* libtextstyle/gnulib-local/lib/glib/gstrfuncs.c: Include gprintfint.h.
(g_ascii_dtostr, g_ascii_formatd): Enable.
(ISSPACE, ISUPPER, ISLOWER, ISALPHA, TOUPPER, TOLOWER): Move out of function
g_parse_long_long.
(g_ascii_strcasecmp): Enable.

--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -55,6 +55,9 @@
 /lib/float+.h
 /lib/float.c
 /lib/float.in.h
+/lib/fpucw.h
+/lib/frexp.c
+/lib/frexpl.c
 /lib/fstat.c
 /lib/fsync.c
 /lib/full-write.c
@@ -119,6 +122,10 @@
 /lib/pathmax.h
 /lib/printf-args.c
 /lib/printf-args.h
+/lib/printf-frexp.c
+/lib/printf-frexp.h
+/lib/printf-frexpl.c
+/lib/printf-frexpl.h
 /lib/printf-parse.c
 /lib/printf-parse.h
 /lib/raise.c
@@ -391,7 +398,9 @@ core
 /lib/float.h-t
 /lib/glib/ghash.h
 /lib/glib/glist.h
+/lib/glib/gmacros.h
 /lib/glib/gprimes.h
+/lib/glib/gprintfint.h
 /lib/glib/gstrfuncs.h
 /lib/glib/gstring.h
 /lib/glib/gtypes.h
