Update after gnulib changed.
* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC_COMMON_DEPENDENCIES): Add
windows-mutex, windows-once, windows-recmutex.
* gettext-runtime/m4/flexmember.m4: Update from gnulib.
* gettext-runtime/intl/flexmember.h: Likewise.
* gettext-runtime/intl/localcharset.c: Likewise.
* gettext-runtime/intl/windows-mutex.h: New file, from gnulib.
* gettext-runtime/intl/windows-mutex.c: New file, from gnulib.
* gettext-runtime/intl/windows-once.h: New file, from gnulib.
* gettext-runtime/intl/windows-once.c: New file, from gnulib.
* gettext-runtime/intl/windows-recmutex.h: New file, from gnulib.
* gettext-runtime/intl/windows-recmutex.c: New file, from gnulib.
* gettext-runtime/intl/windows-spinlock.h: New file, from gnulib.
* gettext-runtime/intl/lock.h: Update from gnulib.
* gettext-runtime/intl/lock.c: Likewise.
* gettext-runtime/intl/Makefile.am (EXTRA_DIST): Add windows-*.h.
(LIBINTLSOURCES): Conditionally add windows-*.c.
(windows-mutex.lo, windows-recmutex.lo, windows-once.lo): New rules.
(*.lo): Update dependencies.
* gettext-runtime/configure.ac: New condition WINDOWS_NATIVE.
* gettext-tools/configure.ac: Likewise.
* Makefile.am (distcheck-hook): Check that gettext-runtime/intl/windows-*.[hc]
are up-to-date.

--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -87,6 +87,13 @@ case "$host_os" in
 esac
 AM_CONDITIONAL([WOE32], [test $is_woe32 = yes])
 
+dnl Some code is only meant to be compiled on native Windows.
+case "$host_os" in
+  mingw*) is_windows_native=yes ;;
+  *) is_windows_native=no ;;
+esac
+AM_CONDITIONAL([WINDOWS_NATIVE], [test $is_windows_native = yes])
+
 dnl Checks for libraries.
 
 dnl These are the only lines required to internationalize the package.
