--- a/libtextstyle/lib/Makefile.am
+++ b/libtextstyle/lib/Makefile.am
@@ -226,8 +226,8 @@ config.h: $(BUILT_SOURCES) libtextstyle.sym
 	            ;; \
 	        esac; \
 	      done; \
-	    } 5>&1 \
-	      | sed -e 's,.* ,,' | LC_ALL=C sort | LC_ALL=C uniq \
+	    } 5>&1 1>&2 \
+	      | sed -e 's,.* ,,' | grep -v '@' | LC_ALL=C sort | LC_ALL=C uniq \
 	      | LC_ALL=C join -v 1 - libtextstyle.sym \
 	      | sed -e 's,^\(.*\)$$,#define \1 libtextstyle_\1,' > config.h-t; \
 	  } 6>&1 && \
